--- a/view/style.css
+++ b/view/style.css
@@ -46,6 +46,7 @@ body {
     font-size: 14px;
 }
 
+
 .item:hover {
     color: white;
 }
@@ -70,13 +71,13 @@ body {
 }
 
 .dropdown-menu {
-    position: absolute;
     display: none;
     background-color: #5f4dee;
     border-radius: 3px;
     margin-top: -3%;
     line-height: 25px;
     width: 38%;
+    position: absolute;
 }
 
 .item-dropdown {
@@ -84,7 +85,6 @@ body {
     background-color: #5f4dee;
     color: #dadfe2;
     margin: 10px;
-    width:90%;
     margin-left: 15%;
     font-size: 14px;
 }
@@ -139,15 +139,17 @@ div {
     grid-auto-columns: 100px;
 }
 
-h1 {
+.text {
+    display: block;
     font-size: 56px;
     color: white;
 }
 
-p {
+.text-information {
     margin-top: 30px;
     margin-bottom: 30px;
     text-align: justify;
+    display: block;
 }
 
 .img-header {
@@ -215,7 +217,7 @@ p {
 
 /* - - - - - - - - - - - - - - description - - - - - - - - - - - - - - - - */
 
-.sub-title {
+.subtitle {
     display:flex;
     text-align: center;
     justify-content: center;
@@ -242,7 +244,8 @@ p {
 }
 
 .card {
-    margin-top: 5%;
+    margin-top: 10%;
+    padding: 0;
 }
 
 .card-image {
@@ -314,6 +317,7 @@ footer {
     text-align: left;
     color: #e2e1e8;
     margin-top: 50px;
+    margin-left: 15%;
 }
 
 .footer-text {
@@ -321,8 +325,10 @@ footer {
     font-size: 14px;
     color: #e2e1e8;
     max-width: 330px;
-    margin-top: 10px;
+    margin-top: 2%;
+    margin-bottom: 2%;
     line-height: 25px;
+    margin-left: 15%;
 }
 
 .about-container, .link-container, .contact-container {
@@ -334,14 +340,16 @@ footer {
     display: flex;
     justify-content: center;
     text-align: center;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin: 0;
+    padding: 0;
     font-size: 15px;
 }
 
 a {
     color: #e2e1e8;
 }
+
+/* - - - - - - - - - - - - - - 1024px - - - - - - - - - - - - - - - - */
 
 @media only screen and (max-width: 1024px) {
     .container {
@@ -354,7 +362,7 @@ a {
     }
 
     .text-container {
-        margin-right: 150px;;
+        margin-right: 100px;;
     }
 
     .text-information {
@@ -378,7 +386,9 @@ a {
     }
 }
 
-@media only screen and (max-width: 768px) {
+/* - - - - - - - - - - - - - - 915px - - - - - - - - - - - - - - - - */
+
+@media only screen and (max-width: 915px) {
     .checkbutton {
         display: block;
     }
@@ -387,17 +397,17 @@ a {
         position: fixed;
         width: 100%;
         height: 100%;
-        right: -150%;
         background-color: #5f4dee;
+        left: 100%;
         text-align: left;
         transition: all .5s;
-        display: none;
-        line-height: 5px;
+        display: block;
     }
 
     nav ul li {
         display: block;
-        margin: 50px 0;
+        margin: 1%;
+        height: 3%;
     }
 
     #check:checked ~ ul {
@@ -410,8 +420,6 @@ a {
 
     .img-header {
         transform: rotate(0deg);
-        height: 600px;
-        width: 700px;
         display: flex;
     }
 
@@ -424,6 +432,7 @@ a {
         text-align: center;
         justify-content: center;
         width: 90%;
+        margin-left: 2%;
     }
 
     .text-information {
@@ -439,8 +448,8 @@ a {
         margin: 5px;
     }
 
-    h1 {
-        font-size: 38px;
+    .text {
+     font-size: 40px;
     }
 
     .info {
@@ -471,22 +480,290 @@ a {
     }
 
     footer {
-        height: 650px;
+        height: 500px;
     }
 
     .footer-text {
         margin: 0;
     }
+
+    .btn-login {
+        margin: 3% 2% 3% 2%;
+        display: block;
+    }
+
+    .dropdown-menu {
+        width: 100%;
+    }
+
+    .item-dropdown {
+        text-align: left;
+        margin-left: 5%;
+    }
+
+    hr {
+        margin-left: 2%;
+    }
+
+    .subtitle {
+        font-size: 17px;
+    }
+
+    .about-container, .link-container, .contact-container {
+        margin: 0;
+        padding: 1% 4% 1% 4%;
+    }
+
+    .footer-title {
+        margin: 0;
+        margin-top: 8%;
+    }
+
+    .copyright-container {
+        margin: 5% 0 5% 0;
+    }
 }
+
+/* - - - - - - - - - - - - - - 750px - - - - - - - - - - - - - - - - */
+
+@media only screen and (max-width: 750px) {
+    h1 {
+        margin: 5% 0 5% 0;
+    }
+
+    .text-container {
+        width: 65%;
+        margin-left: 15%;
+    }
+
+    .img-header {
+        width: 510px;
+        height: 361px;
+        margin: 10%;
+    }
+
+    .description {
+        width: 80%;
+        margin-left: 10%;
+    }
+
+    .about-container, .link-container, .contact-container {
+        margin-left: 10%;
+    }
+} 
+
+/* - - - - - - - - - - - - - - 425px - - - - - - - - - - - - - - - - */
 
 @media only screen and (max-width: 425px) {
     .logo-tivo {
-        margin: auto, auto, 0, 0;
+        margin: 3% 0 0 3%;
+    }
+
+    .container {
+        margin: 0;
+        padding: 0;
+        margin-left: 2%;
+    }
+
+    .text-container {
+        margin-left: 3%;
+        width: 90%;
+    }
+
+    h1 {
+        margin: 15% 0 5% 0;
+        width: 100%;
+    }
+
+    .img-container {
+        margin: 10% 0 10% 0;
+        padding: 0;
+    }
+
+    .img-header {
+        width: 395px;
+        height: 280px;
+        margin: 2%;
+    }
+
+    .text-information {
+        margin: 5% 0 10% 0;
+        padding: 0;
+        width: 100%;
+    }
+
+    .info {
+        margin: 0 0 10% 0;
+    }
+
+    .card {
+        margin: 0;
+        padding: 0;
+    }
+
+    .card-title, .subtitle-card {
+        margin: 6%;
+        padding: 0;
+    }
+
+    footer {
+        height: 400px;
+    }
+
+    .about-container, .about-container, .link-container, .contact-container {
+        margin: 1%;
+    }
+
+    .copyright-container {
+        margin-top: 10%;
+    }
+
+    .btn-login {
+        margin-top: 5%;
     }
 }
+
+/* - - - - - - - - - - - - - - 375px - - - - - - - - - - - - - - - - */
 
 @media only screen and (max-width: 375px) {
     .logo-tivo {
         margin: auto, auto, 0, 0;
     }
+
+    .img-header {
+        width: 345px;
+        height: 244px;
+        margin: 2%;
+        padding: 0;
+    }
+
+    h2 {
+        width: 95%;
+        margin-left: 4%;
+    }
+}
+
+/* - - - - - - - - - - - - - - 320px - - - - - - - - - - - - - - - - */
+
+@media only screen and (max-width: 320px) {
+    .img-header {
+        width: 290px;
+        height: 205px;
+        margin: 3%;
+    }
+
+    .copyright-container {
+        margin-top: 10%;
+    }
+
+    footer {
+        height: 450px;
+    }
+}
+
+/* - - - - - - - - - - - - - - modal- - - - - - - - - - - - - - - - - */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4); 
+}
+    
+.modal-content {
+    color: black;
+    background-color: #fefefe;
+    margin: 15% auto; 
+    padding: 20px;
+    border: 1px solid #888;
+    width: 60%;
+    align-items: center;
+    justify-content: center; 
+    border-radius: 5%;
+}
+  
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+  
+.close:hover, .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+input {
+    align-items: center;
+    height: 20%;
+    width: 60%;
+    border: 1px solid transparent;
+    border-bottom: 1px solid #5f4dee;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+form {
+    margin: 5%;
+}
+
+#nome, #email {
+    width: 85%;
+}
+
+#dados {
+    margin: 40%;
+}
+
+#endereco {
+    margin: 45%;
+}
+
+#btn-submeter {
+    border-radius: 50px;
+    background-color: transparent;
+    border: 1px solid #5f4dee;
+    width: 40%;
+    height: 40px;
+    color: #5f4dee;
+    cursor: pointer;
+    margin: 5% 5% 5% 30%;
+}
+
+#btn-submeter:hover {
+    background-color: #5f4dee;
+    color: white;
+}
+
+#dataNascimento {
+    width: 20%;
+    margin-right: 5%;
+}
+
+#tel {
+    width: 27%;
+}
+
+#cep {
+    width: 40%;
+    margin-right: 5%;
+}
+
+#rua {
+    width: 80%;
+}
+
+#bairro, #uf {
+    width: 35%;
+}
+
+#cidade, #ibge {
+    width: 34%;
 }
