--- a/view/style.css
+++ b/view/style.css
@@ -349,6 +349,216 @@ a {
     color: #e2e1e8;
 }
 
+/* - - - - - - - - - - - - - - modal- - - - - - - - - - - - - - - - - */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4); 
+}
+    
+.modal-content {
+    color: black;
+    background-color: #fefefe;
+    margin: 15% auto; 
+    padding: 20px;
+    border: 1px solid #888;
+    width: 60%;
+    align-items: center;
+    justify-content: center; 
+    border-radius: 5%;
+}
+  
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+  
+.close:hover, .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+input {
+    align-items: center;
+    height: 20%;
+    width: 60%;
+    border: 1px solid transparent;
+    border-bottom: 1px solid #5f4dee;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+form {
+    margin: 5%;
+}
+
+#nome, #email {
+    width: 85%;
+}
+
+#btn-submeter {
+    border-radius: 50px;
+    background-color: transparent;
+    border: 1px solid #5f4dee;
+    width: 40%;
+    height: 40px;
+    color: #5f4dee;
+    cursor: pointer;
+    margin: 5% 5% 5% 27%;
+}
+
+#btn-submeter:hover {
+    background-color: #5f4dee;
+    color: white;
+}
+
+#dataNascimento {
+    width: 20%;
+    margin-right: 5%;
+}
+
+.dados {
+    margin-left: 35%;
+}
+
+.endereco {
+    margin-left: 42%;
+}
+
+#tel {
+    width: 27%;
+}
+
+#cep {
+    width: 40%;
+    margin-right: 5%;
+}
+
+#rua {
+    width: 80%;
+}
+
+#bairro, #uf {
+    width: 35%;
+}
+
+#cidade, #ibge {
+    width: 34%;
+}
+
+#nome, #email, #dataNascimento, #tel, #cep, #rua, #bairro, #cidade, #uf, #ibge {
+    outline: none;
+}
+
+.mySlides {display: none}
+img {vertical-align: middle;}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 95%;
+  position: relative;
+  margin: 8%;  
+  overflow: auto;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: black;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+.img-slider {
+    border-radius: 50%;
+    margin-left: 5%;
+}
+
+/* Caption text */
+.name {
+  color: black;
+  font-size: 15px;
+  bottom: 8px;
+  width: 100%;
+  text-align: left;
+  font-weight: bold;
+  padding-top: 15px;
+}
+
+/* Number text (1/3 etc) */
+.slider-text {
+  color: #6b747b;
+  font-size: 16px;
+  padding: 8px 12px;
+  position: absolute;
+  text-align: left;
+  top: 0;
+  right: 0;
+  width: 75%;
+  margin-top: 2%;
+  margin-right: 3%;
+}
+
+.feedback {
+    font-style: italic;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .prev, .next,.text {font-size: 11px}
+}
+
 /* - - - - - - - - - - - - - - 1024px - - - - - - - - - - - - - - - - */
 
 @media only screen and (max-width: 1024px) {
@@ -659,111 +869,4 @@ a {
     footer {
         height: 450px;
     }
-}
-
-/* - - - - - - - - - - - - - - modal- - - - - - - - - - - - - - - - - */
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0,0.4); 
-}
-    
-.modal-content {
-    color: black;
-    background-color: #fefefe;
-    margin: 15% auto; 
-    padding: 20px;
-    border: 1px solid #888;
-    width: 60%;
-    align-items: center;
-    justify-content: center; 
-    border-radius: 5%;
-}
-  
-.close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-  
-.close:hover, .close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-input {
-    align-items: center;
-    height: 20%;
-    width: 60%;
-    border: 1px solid transparent;
-    border-bottom: 1px solid #5f4dee;
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
-
-form {
-    margin: 5%;
-}
-
-#nome, #email {
-    width: 85%;
-}
-
-#dados {
-    margin: 40%;
-}
-
-#endereco {
-    margin: 45%;
-}
-
-#btn-submeter {
-    border-radius: 50px;
-    background-color: transparent;
-    border: 1px solid #5f4dee;
-    width: 40%;
-    height: 40px;
-    color: #5f4dee;
-    cursor: pointer;
-    margin: 5% 5% 5% 30%;
-}
-
-#btn-submeter:hover {
-    background-color: #5f4dee;
-    color: white;
-}
-
-#dataNascimento {
-    width: 20%;
-    margin-right: 5%;
-}
-
-#tel {
-    width: 27%;
-}
-
-#cep {
-    width: 40%;
-    margin-right: 5%;
-}
-
-#rua {
-    width: 80%;
-}
-
-#bairro, #uf {
-    width: 35%;
-}
-
-#cidade, #ibge {
-    width: 34%;
 }
