--- a/view/style.css
+++ b/view/style.css
@@ -460,10 +460,11 @@ form {
     outline: none;
 }
 
+/* - - - - - - - - - - - - - - slider - - - - - - - - - - - - - - - - - */
+
 .mySlides {display: none}
 img {vertical-align: middle;}
 
-/* Slideshow container */
 .slideshow-container {
   max-width: 95%;
   position: relative;
@@ -471,7 +472,6 @@ img {vertical-align: middle;}
   overflow: auto;
 }
 
-/* Next & previous buttons */
 .prev, .next {
   cursor: pointer;
   position: absolute;
@@ -487,13 +487,11 @@ img {vertical-align: middle;}
   user-select: none;
 }
 
-/* Position the "next button" to the right */
 .next {
   right: 0;
   border-radius: 3px 0 0 3px;
 }
 
-/* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
   background-color: rgba(0,0,0,0.8);
 }
@@ -503,7 +501,6 @@ img {vertical-align: middle;}
     margin-left: 5%;
 }
 
-/* Caption text */
 .name {
   color: black;
   font-size: 15px;
@@ -514,7 +511,6 @@ img {vertical-align: middle;}
   padding-top: 15px;
 }
 
-/* Number text (1/3 etc) */
 .slider-text {
   color: #6b747b;
   font-size: 16px;
@@ -536,7 +532,6 @@ img {vertical-align: middle;}
   background-color: #717171;
 }
 
-/* Fading animation */
 .fade {
   -webkit-animation-name: fade;
   -webkit-animation-duration: 1.5s;
@@ -554,7 +549,6 @@ img {vertical-align: middle;}
   to {opacity: 1}
 }
 
-/* On smaller screens, decrease text size */
 @media only screen and (max-width: 300px) {
   .prev, .next,.text {font-size: 11px}
 }
